Fix progress bar overflow

--- a/ccbrowse/www/css/ccbrowse.css
+++ b/ccbrowse/www/css/ccbrowse.css
@@ -138,11 +138,16 @@ nav {
       text-align: center;
       background: black;
       border-radius: 4px; }
-    nav .progress .availability {
+    nav .progress .availability-container {
       position: absolute;
-      background: url("../img/progress-available.png") repeat-x;
-      border: 1px solid #66fc43;
-      height: 6px; }
+      width: 100%;
+      height: 100%;
+      overflow: hidden; }
+      nav .progress .availability-container .availability {
+        position: absolute;
+        background: url("../img/progress-available.png") repeat-x;
+        border: 1px solid #66fc43;
+        height: 6px; }
 
 @media (max-width: 1024px) {
   nav .days .day {
@@ -345,9 +350,6 @@ nav {
     margin: 0 5px;
     display: inline-block;
     background: url("../img/bulb-disabled.png") no-repeat; }
-
-.popup-content {
-  z-index: 1000; }
 
 .popup-content .color-box {
   width: 10px;
